fix missing module imports

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -22,6 +22,9 @@
   },
 
   "READ": {
+    "SELECTION": {
+      "TITLE": "Werkauswahl"
+    },
     "TOC": {
       "TITLE": "Inhaltsverzeichnis",
       "PAGE_REF": "S. {{page}}"
