--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,9 @@
   },
 
   "READ": {
+    "SELECTION": {
+      "TITLE": "Werkauswahl"
+    },
     "TOC": {
       "TITLE": "Table of Contents",
       "PAGE_REF": "p. {{page}}"
