--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,7 @@
       },
       "WORKS": {
         "TITLE": "Works selection",
+        "NO_VOLUMES": "There are no works available to search",
         "SELECT": {
           "LABEL": "Works selection",
           "OPTIONS": {
