implement various small improvements

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,8 @@
   "COMMON": {
     "SCROLL_TOP_TOOLTIP": "Scroll to top",
     "ANCHOR_BUTTON_TOOLTIP": "Create link to this element",
-    "VOL_WORK_TITLE": "Volume {{volumeNumber}}: {{title}}"
+    "VOL_WORK_TITLE": "Volume {{volumeNumber}}: {{title}}",
+    "VOL_WORK_TITLE_ALT": "{{title}} (Volume {{volumeNumber}})"
   },
 
   "NAVBAR": {
@@ -106,7 +107,7 @@
         "VOLUME": "Volume"
       },
       "NAV_FULLTEXT_BTN": {
-        "TEXT": "Volltext",
+        "TEXT": "Full text",
         "TOOLTIP": "Zum Absatz im Volltext springen"
       }
     }
