--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,8 @@
   "COMMON": {
     "SCROLL_TOP_TOOLTIP": "Nach oben",
     "ANCHOR_BUTTON_TOOLTIP": "Erstelle Link zu diesem Element",
-    "VOL_WORK_TITLE": "Band {{volumeNumber}}: {{title}}"
+    "VOL_WORK_TITLE": "Band {{volumeNumber}}: {{title}}",
+    "VOL_WORK_TITLE_ALT": "{{title}} (Band {{volumeNumber}})"
   },
 
   "NAVBAR": {
@@ -23,7 +24,7 @@
 
   "READ": {
     "INFO": {
-      "HEADER": "Werk-Daten",
+      "HEADER": "Werkdaten",
       "TITLE": "Titel",
       "VOLUME": "Band",
       "ABBREV": "Siglum",
