truncate work title in tree

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -27,7 +27,7 @@
       "HEADER": "Werkdaten",
       "TITLE": "Titel",
       "VOLUME": "Band",
-      "ABBREV": "Siglum",
+      "SIGLUM": "Siglum",
       "YEAR": "Jahr"
     },
     "SELECTION": {
