add links to volumes on korpora.org

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -28,7 +28,8 @@
       "TITLE": "Titel",
       "VOLUME": "Band",
       "SIGLUM": "Siglum",
-      "YEAR": "Jahr"
+      "YEAR": "Jahr",
+      "KORPORA_LINK": "Link zum Band in druckähnlicher Darstellung"
     },
     "SELECTION": {
       "HEADER": "Werkauswahl",
