--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,8 @@
     "SCROLL_TOP_TOOLTIP": "Scroll to top",
     "ANCHOR_BUTTON_TOOLTIP": "Create link to this element",
     "VOL_WORK_TITLE": "Volume {{volumeNumber}}: {{title}}",
-    "VOL_WORK_TITLE_ALT": "{{title}} (Volume {{volumeNumber}})"
+    "VOL_WORK_TITLE_ALT": "{{title}} (Volume {{volumeNumber}})",
+    "IMAGE": "Image"
   },
 
   "NAVBAR": {
