--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,9 +16,6 @@
       "EN": "English"
     }
   },
-  "STARTPAGE": {
-    "TEXT": "Diese Website soll eine Webanwendung zum Lesen und Durchsuchen der Texte des Bonner Kant-Korpus werden. Sie befindet sich derzeit in der Entwicklung."
-  },
   "NOT-FOUND": {
     "TEXT": "Die angeforderte Seite existiert nicht."
   },
@@ -142,7 +139,7 @@
 
   "ERROR": {
     "SUMMARY": "Fehler",
-    "GENERIC": "Ein technischer Fehler ist aufgetreten, bitte kontaktieren Sie uns unter kant-search@mailbox.org. Wenn möglich, teilen Sie uns den Zeitpunkt des Fehlers mit und eine Beschreibung dessen, was vor dem Auftreten des Fehlers getan wurde (z.B. aufgerufene URL, Suchparameter, ...).",
+    "GENERIC": "Ein technischer Fehler ist aufgetreten, bitte kontaktieren Sie uns unter kant-search@mailbox.org. Wenn möglich, teilen Sie uns den Zeitpunkt des Fehlers mit und eine Beschreibung dessen, was vor dem Auftreten des Fehlers getan wurde (z.B. aufgerufene URL, Suchparameter, ...): ",
     "BAD_REQUEST": {
       "GENERIC": "Ungültige Anfrage.",
       "INVALID_WORK_SELECTION": "Ungültige Werkauswahl.",
