fix selector widths

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -55,7 +55,7 @@
         "NO_VOLUMES": "Es sind keine Werke zum Durchsuchen vorhanden",
         "SELECT": {
           "LABEL": "Werkauswahl",
-          "PLACEHOLDER": "Select works...",
+          "PLACEHOLDER": "Wähle Werke aus...",
           "OPTIONS": {
             "ALL": "Alle Bände",
             "ALL_GERMAN": "Deutschsprachige Schriften",
