--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,13 +75,14 @@
             "YEAR": "by publication year"
           }
         },
+        "STEMMING": {
+          "TITLE": "Stemming",
+          "LABEL": "Use stemmed texts",
+          "TOOLTIP": "If this switch is activated, the results do not only contain exact hits, but also hits where the stem of the word matches the stem of the search term. Example: Search term 'sagen' (german for 'say') also finds matches with 'sag' and 'sage' (both imperative forms of 'say'). Because the stemms are determined algorithmically and the german language is rather complex, this methods does not work perfectly; 'sagen' for example does not match 'sagte' (past tense, 'said')."
+        },
         "SCOPE": {
           "TITLE": "Search scope",
           "TOOLTIP": "",
-          "WITH_STEMMING": {
-            "LABEL": "Use stemmed texts",
-            "TOOLTIP": "If this switch is activated, the results do not only contain exact hits, but also hits where the stem of the word matches the stem of the search term. Example: Search term 'sagen' (german for 'say') also finds matches with 'sag' and 'sage' (both imperative forms of 'say'). Because the stemms are determined algorithmically and the german language is rather complex, this methods does not work perfectly; 'sagen' for example does not match 'sagte' (past tense, 'said')."
-          },
           "INCLUDE_FOOTNOTES": {
             "LABEL": "Search footnotes",
             "TOOLTIP": "Footnotes are included in the search if the switch is on."
@@ -96,7 +97,7 @@
           }
         },
         "SEARCH_TIPS": {
-          "TITLE": "",
+          "TITLE": "Combination of Search Terms",
           "TEXT": "Use special characters for specialized searches: & for AND, | for OR, ! for NOT, (...) to group terms, and \"...\" for exact phrases. Example: (dog | \"white mice\") & !cat",
           "EXAMPLE": ""
         }
